# tribewatch-client

./: .gitignore  LICENSE  README.md  TECHNICAL.md  build.py  installer-dev.iss  installer.iss  pyproject.toml  tribewatch.spec
.github/workflows/: dev-build.yml  release.yml  scorecard.yml
scripts/: ini.txt
tribewatch/: __init__.py  __main__.py  app.py  calibrate.py  capture.py  client_auth.py  client_main.py  config.py  dedup.py  eos.py  fuzzy.py  http.py  log_buffer.py  ocr_engine.py  overlay.py  overlay_ui.py  parser.py  reconnect.py  reconnect_history.py  relay.py  server_api.py  server_id.py  setup.py  singleton.py  updater.py  webhook.py
