[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribewatch"
version = "0.1.0"
description = "ARK: Survival Ascended tribe log monitor — client component"
requires-python = ">=3.12"
dependencies = [
    "winocr>=0.0.15",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "tomli-w>=1.0.0",
    "python-dotenv>=1.0.0",
    "rapidocr-onnxruntime>=1.2.0",
    "pyautogui>=0.9.54",
    # Used by tribewatch.singleton to enumerate sibling TribeWatch
    # processes and verify kills. Was previously transitive — now an
    # explicit dep so the CI build env reliably includes it.
    "psutil>=5.9",
    "qrcode>=7.0",
]

[project.optional-dependencies]
tesseract = ["pytesseract>=0.3.10"]

[project.scripts]
tribewatch = "tribewatch.client_main:main"

[tool.setuptools.packages.find]
include = ["tribewatch*"]
